minor fix for header h1 on small screens

--- a/css/style.dev.css
+++ b/css/style.dev.css
@@ -99,6 +99,7 @@ padding: 15px 10px;
 font-size: 250%;
 width: 80%;
 margin: 0;
+line-height: 100%;
 }
 
 #header p {
